<resources>
    <string name="app_name">Saúde Bucal Nas Mãos</string>
    <string name="auto_cuidado">
"A escovação retira a placa bacteriana ou biofilme e os resíduos de alimentos, ajudando a prevenir a cárie dentária.
Escove os dentes com movimentos suaves e curtos, concentrando na limpeza de cada setor da boca (parte anterior e posterior).
Prefira escovas com cerdas macias. As escovas de cerda média ou dura podem machucar a gengiva e causar sangramento.
Troque a escova dentária quando notar que as cerdas não limpam mais direito ou estão ‘descabeladas’ demais.
A melhor escovação é realizada junto com creme dental com flúor."
    </string>
    <string name="cuidado_titulo">
        "Uma das maneiras mais eficazes de prevenir a dor dentária é cuidar da higienização.
Vamos ver o passo a passo para um boa higiene bucal?"
    </string>
    <string name="cuidado_fragment1">
        "Não esqueça de escovar a língua e passar o fio dental, diariamente! Se não tiver fio dental, substitua por algum item que possa ser usado entre os dentes.
A escovação deve ser realizada 3x/dia e principalmente, à noite, antes de dormir.
Além de evitar o famoso mau hálito, o uso regular do fio limpa a gengiva, evitando a gengivite (quando a gengiva sangra)"
    </string>
    <string name="cuidado_fragment2">
        "Dobre o fio dental no formato da letra C e deslize de cima para baixo nas laterais de cada dente.
Não se esqueça de passar o fio dental nas partes de trás dos seus dentes, nos lados esquerdo e direito, em cima e em baixo."
    </string>
    <string name="cuidado_fragment3">
        "Então, além da higiene bucal para evitar a presença de cárie dentária e a dor dentária. Veja outras dicas para manter a sua saúde bucal em dia.
A famosa frase: A saúde começa pela boca! Ela é verdadeira, a alimentação saudável contribui para a saúde dos dentes e gengivas.
Os alimentos como o queijo, o leite, a fruta e os vegetais protegem contra a cárie dentária.
A cenoura e outros vegetais/verduras, como a alface, o tomate ou os brócolis e as frutas frescas são ricos em água, fibra, vitaminas e minerais. Para comermos estes alimentos, o tempo de mastigação é maior, ou seja, há mais produção de saliva. A saliva ajuda a limpar os dentes e a protegê-los das bactérias."
    </string>
    <string name="cuidado_subtitulo">
        "Além de alimentos com açúcar, há outros alimentos desaconselhados?"
    </string>
    <string name="cuidado_fragment4">
         "Sim! Os alimentos com farinhas muito refinadas, como bolos, bolachas, folhados, batatas fritas, flocos de cereais açucarados, também contribuem para a cárie dentária.
Por quê? Alguns destes alimentos têm açúcar mas, mesmo os que não têm, como as batatas fritas, são transformados em açúcar na boca. Além disso, como ficam “presos” aos dentes durante muito tempo, vão causar mais danos, se não forem removidos com a escovação.
Se possível, deixe este tipo de alimento para o fim de semana ou o dia da ‘alegria’.
Ainda, há bebidas e sucos com bastante açúcar e que podem provocar a ocorrência de cárie dentária.
Dê preferência a suco natural e a água."
    </string>
    <string name="obs">
        "Fique atento com a sua saúde bucal:"
    </string>
    <string name="obs1">
        "Meu dente está doendo. O que fazer agora?"
    </string>
    <string name="obs_fragment1">
        "Procure o dentista para ele avaliar o seu caso."
    </string>
    <string name="obs2">
        "Minha gengiva está sangrando muito. O que pode ser?"
    </string>
    <string name="obs_fragment2">
        "Pode ser excesso de alimentos entre os dentes. Quando você não usa o fio dental ou equivalente, a gengiva sangra. Gengiva saudável não sangra."
    </string>
    <string name="obs3">
        "Meu dente caiu da boca. O que posso fazer?"
    </string>
    <string name="obs_fragment3">
        "Armazena o dente ou o fragmento imediatamente em leite gelado, ou soro fisiológico ou a saliva. Não tente limpá-lo ou recolocá-lo na boca. Procurar atendimento odontológico o mais rápido possível. O dentista irá ajuda-lo na situação."
    </string>
    <string name="obs4">
        "Estou com feridas na boca. O que pode ser?"
    </string>
    <string name="obs_fragment4">
        "Podem aparecer várias feridas na boca, podendo ser Herpes, aftas, candidíase ou simplesmente machucado, porém, é importante avaliar o tempo que permanecem. Se passar de duas semanas, faça uma visita ao dentista."
    </string>
    <string name="locais_fragment">
        "Saiba quais os Centros de Saúde possuem dentista 12 horas por dia de segunda a sexta-feira.  Procure qual seja referência da sua casa."
    </string>
    <string name="locais_desc">
        "Para caso de urgência:
        UPA Norte
        Rua Oscar Lobo Pereira, 270 - Primeiro de Maio
        (31) 3277-6705
        UPA Oeste
        Av. Barão Homem de Melo, 1710
        (31) 3277-7044/6875/6871.
        HOSPITAL ODILON BEHRENS
        R. Formiga, 50 - São Cristóvão, Belo Horizonte - MG,
        31110-430
        Aberto 24 horas
        (31) 3277-6198"
    </string>
    <string name="vazio">""</string>
    <string name="trauma_dentario">"Traumatismo Dentário"</string>
    <string name="aftas">"Aftas"</string>
    <string name="pericoronarite">"Pericoronarite"</string>
    <string name="tirismo">"Trismo"</string>
    <string name="gengivite">"Gengivite"</string>
    <string name="pulpite">"Pulpite"</string>
    <string name="SofreuTrauma">"Sofreu um trauma na face?"</string>
    <string name="Retorno">"Retorne ao menu principal."</string>
    <string name="DenteSaiu">"O dente saiu todo da boca?"</string>
    <string name="FraturouDente">"Fraturou um pedaço do dente?"</string>
    <string name="GuardarDente">"Guarde-o em uma solução de leite gelado, soro fisiológico ou saliva e procure atendimento odontológico"</string>
    <string name="Avulsao"> Avulsão:O dente deve ser armazenado imediatamente em leite gelado, soro fisiológico ou saliva, para melhor conservação dos ligamentos. Não tente limpá-lo ou recolocá-lo na boca. Procurar atendimento odontológico o mais rápido possível. Se reimplantado em menos de 60 minutos, o prognóstico é favorável; porém, se houver demora ou se o dente for mantido seco ou em soluções não indicadas, a perda será permanente </string>
    <string name="QuebrouDente">"Quebrou um pedaço do dente?"</string>
    <string name="QuebrouDenteOrient">"Nas fraturas em esmalte e dentina sem exposição pulpar, é dispensável o atendimento de urgência, pois o prognóstico é favorável mesmo quando o tratamento é tardio; entretanto, o atendimento odontológico é necessário para avaliação e tratamento do caso. Caso haja fratura com exposição pulpar ou de raiz o rápido atendimento após o trauma dentário oferece melhor prognóstico (acompanhamento)."</string>
    <string name="DenteMoveu">"O dente mudou de posição?"</string>
    <string name="Luxacao">"Luxação: O elemento dental se desloca parcialmente. Presença de sangramento gengival e aparência do dente alongado ou encurtado. Procurar atendimento odontológico para reposicionamento do dente e contenção."</string>
    <string name="Concussao">"Concussão ou subluxação: Lesão de tecidos de suporte sem perda ou deslocamento do elemento dental, pode haver presença de sangramento. Recomenda-se alimentos macios e, se necessário, contenção semirrígida no caso da subluxação."</string>
    <string name="Aftas">Ferida na boca:\nApareceu menos de 14 dias?</string>
    <string name="Pericoronarite">"O dente está irrompendo e há uma inflamação ao redor?"</string>
    <string name="Gengivite">"A gengiva está sangrando?"</string>
    <string name="Trismo">"Está com limitação de abertura bucal?"</string>
    <string name="Pulpite">"Está com dor no dente?"</string>
    <string name="AftasN">"Ferida na boca há mais de 14 dias: procurar atendimento odontológico."</string>
    <string name="AftasS">"São esbranquiçadas, com bordas vermelhas, dolorosas, que aparecem na superfície da mucosa bucal, na língua, no lábio interno, na bochecha, no palato (céu da boca) e raramente na região da garganta?"</string>
    <string name="AftasSS">" Você consumiu alimentos mais condimentados, frutas cítricas/ácidas; passou por momentos estressantes ou mudanças hormonais nos ciclos da mulher; teve pequeno trauma mecânico por pontas pontiagudas ou escovas dentais; teve queimaduras por alimentos sólidos ou líquidos; faz uso de alguns medicamentos?"</string>
    <string name="AftasSN">"Procurar atendimento odontológico."</string>
    <string name="AftasSSS">"As aftas : aparecem em qualquer idade e com mais frequência no sexo feminino. Por tratar-se de um problema frequente e sem complicações, embora as aftas sejam bastante incômodas, algumas pessoas deixam de observar que as lesões devem desaparecer num período de 10 a 14 dias.\n
Caso o problema persista por mais tempo, devem procurar os serviços de saúde para uma avaliação mais detalhada.\n
Como forma de tratamento, destaca-se a higiene bucal adequada, alimentação menos ácida, com sucos naturais não cítricos, uso de enxaguatórios sem álcool; pomadas ou cremes e analgésicos devem ser prescritos pelo dentista e servem para aliviar sintomatologia."</string>
    <string name="AftasSSN">"Procurar atendimento odontológico."</string>
    <string name="PericoronariteS">"Você tem entre 20 a 29 anos?"</string>
    <string name="PericoronariteSS">"A pericoronarite é um estado inflamatório que envolve o tecido mole localizado ao redor da coroa de um dente, geralmente um terceiro molar (siso) inferior em processo de erupção ou semi-incluso.\n
Acomete mais pessoas de 20 a 29 anos.
O tratamento deve ser indicado pelo cirurgião dentista, que poderá ser conservador nos casos em que a pericoronarite está restrita e bem localizada.\n
Nos casos onde a pericoronarite é mais severa, é necessário antibioticoterapia."</string>
    <string name="PericoronariteN">"Procure um dentista."</string>
    <string name="TrismoS">"Você tem disfunção temporomandibular ou se submeteu a extração dentária (principalmente de siso)?"</string>
    <string name="TrismoSS">"Trismo é um espasmo muscular, caracterizado por uma contração súbita e involuntária causando dor e restrição dos movimentos o que limita a abertura da boca.
Provável causa: processo inflamatório e em função das injeções anestésicas locais, mas também está associado a pacientes acometidos por neoplasias de cabeça e pescoço.
Causa desconforto e dificuldade na hora da higienização oral e da alimentação. Quando necessário, está indicado para o tratamento do trismo o uso de anti-inflamatórios não esteróides, relaxantes musculares, ambos devem ser prescritos pelo dentista, bem como terapias físicas através do uso de calor."</string>
    <string name="TrismoN">"Limitação na abertura bucal pode relacionar com histórico de trauma, tumor, estresse e problemas relacionados ao sistema nervoso central. è necessário consultar um profissional de saúde para melhor diagnóstico."</string>
    <string name="GengiviteS">"Tem o costume de usar fio dental todos os dias e escovação satisfatória?"</string>
    <string name="GengiviteSS">"Sangramento na gengiva pode ser sinal de alerta para a saúde do corpo, pois pode estar relacionada a carência de vitamina K, anemia, leucemia, alterações hormonais, desordens hemorrágicas, queda da resistência e diabetes é necessário ir ao dentista ou médico para avaliar."</string>
    <string name="GengiviteSN">"A gengivite mais comum é a induzida pela placa dental (uma película viscosa e incolor de bactérias que se forma constantemente nos dentes e gengiva).
Se a placa não for removida pela escovação e uso de fio dental diários, ela produz toxinas (ácidos) que irritam a mucosa da gengiva causando a gengivite.
Se não tratada pode progredir para perda óssea, a periodontite, no qual pode ocasionar na perda dentária."</string>
</resources>