<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.SearchView
        android:id="@+id/sv_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textNoSuggestions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </android.support.v7.widget.SearchView>

    <android.support.v7.widget.CardView
        android:id="@+id/traumatismo"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:padding="4dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toTopOf="@+id/aftas"
        app:layout_constraintTop_toBottomOf="@+id/sv_search"
        tools:layout_editor_absoluteX="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_image"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:paddingLeft="4dp"
                android:src="@drawable/thumb_trauma"></ImageView>

            <TextView
                android:id="@+id/tv_text"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/iv_image"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:text="@string/trauma_dentario"
                android:textSize="18sp"></TextView>

            <TextView
                android:id="@+id/tv_blah"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_text"
                android:layout_toEndOf="@+id/iv_image"
                android:layout_toRightOf="@+id/iv_image"
                android:text="@string/vazio"></TextView>

        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/aftas"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="8dp"
        android:padding="4dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        app:layout_constraintTop_toBottomOf="@+id/traumatismo"
        tools:layout_editor_absoluteX="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_image"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:paddingLeft="4dp"
                android:src="@drawable/aftas"></ImageView>

            <TextView
                android:id="@+id/tv_text"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/iv_image"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:text="@string/aftas"
                android:textSize="18sp"></TextView>

            <TextView
                android:id="@+id/tv_blah"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_text"
                android:layout_toEndOf="@+id/iv_image"
                android:layout_toRightOf="@+id/iv_image"
                android:text="@string/vazio"></TextView>

        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/pericoronarite"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="8dp"
        android:padding="4dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        app:layout_constraintTop_toBottomOf="@+id/aftas"
        tools:layout_editor_absoluteX="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_image"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:src="@drawable/pericoronarite"></ImageView>

            <TextView
                android:id="@+id/tv_text"
                android:paddingLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/iv_image"
                android:gravity="center"
                android:text="@string/pericoronarite"
                android:textSize="18sp"></TextView>

            <TextView
                android:id="@+id/tv_blah"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_text"
                android:layout_toEndOf="@+id/iv_image"
                android:layout_toRightOf="@+id/iv_image"
                android:text="@string/vazio"></TextView>

        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/gengivite"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="8dp"
        android:padding="4dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        app:layout_constraintTop_toBottomOf="@+id/trismo"
        tools:layout_editor_absoluteX="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_image"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:src="@drawable/gengivite"></ImageView>

            <TextView
                android:id="@+id/tv_text"
                android:paddingLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/iv_image"
                android:gravity="center"
                android:text="@string/gengivite"
                android:textSize="18sp"></TextView>

            <TextView
                android:id="@+id/tv_blah"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_text"
                android:layout_toEndOf="@+id/iv_image"
                android:layout_toRightOf="@+id/iv_image"
                android:text="@string/vazio"></TextView>

        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/trismo"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="8dp"
        android:padding="4dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        app:layout_constraintTop_toBottomOf="@+id/pericoronarite"
        tools:layout_editor_absoluteX="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_image"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:src="@drawable/trismo"></ImageView>

            <TextView
                android:id="@+id/tv_text"
                android:paddingLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/iv_image"
                android:gravity="center"
                android:text="@string/tirismo"
                android:textSize="18sp"></TextView>

            <TextView
                android:id="@+id/tv_blah"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_text"
                android:layout_toEndOf="@+id/iv_image"
                android:layout_toRightOf="@+id/iv_image"
                android:text="@string/vazio"></TextView>

        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/pulpite"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="8dp"
        android:padding="4dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        app:layout_constraintTop_toBottomOf="@+id/gengivite"
        tools:layout_editor_absoluteX="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_image"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:src="@drawable/pulpite"></ImageView>

            <TextView
                android:id="@+id/tv_text"
                android:paddingLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/iv_image"
                android:gravity="center"
                android:text="@string/pulpite"
                android:textSize="18sp"></TextView>

            <TextView
                android:id="@+id/tv_blah"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_text"
                android:layout_toEndOf="@+id/iv_image"
                android:layout_toRightOf="@+id/iv_image"
                android:text="@string/vazio"></TextView>

        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="5dp"></android.support.v7.widget.RecyclerView>
</android.support.constraint.ConstraintLayout>